# PhotoMasterPro

./: .dockerignore  .env.example  .gitignore  .replit  DOCKER_SETUP_GUIDE.md  Dockerfile  Dockerfile.dev  POSTMAN_TESTING_GUIDE.md  PhotoProcessor_API.postman_collection.json  PhotoProcessor_Environment.postman_environment.json  README.md  REFACTORING_SUMMARY.md  app.py  docker-compose.dev.yml  docker-compose.yml  docker-requirements.txt  image_processor.py  image_processor_old.py  init-db.sql  main.py  models.py  photo_processor.db  pyproject.toml  run_server.py  start.py  telegram_bot.py  wsgi.py
attached_assets/: Pasted--INFO-Will-watch-for-changes-in-these-directories-app-photoprocessor-app-dev-INFO--1748442098016.txt
processors/: __init__.py  background_remover.py  collage_maker.py  frame_adder.py  person_swapper.py  photo_retoucher.py  smart_cropper.py  social_optimizer.py
static/css/: style.css
static/js/: app.js
templates/: documentation.html  gallery.html  index.html  upload.html
